移动残影效果

--- a/build-templates/web-mobile/index.html
+++ b/build-templates/web-mobile/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>异名 | cocos-awesome</title>
+  <title>异名 | Cocos Awesome</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
